--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,32 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
+  text-align: center;
+}
+
+img {
+  width: 300px;
+  height: 400px;
+  transition: all 0.3s ease;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+.book {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  padding: 10px;
+  background: black;
+  color: white;
+  width: 100%;
+  border-radius: 5px;
+  margin: 20px 0;
 }
