--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
 .navbar {
   width: 100%;
   height: 10vh;
@@ -25,6 +30,15 @@
 }
 
 .book-list {
+  min-height: 80vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  text-align: center;
+}
+
+.favorites {
   min-height: 80vh;
   width: 100%;
   display: grid;
@@ -55,7 +69,8 @@ button {
   padding: 10px;
   background: black;
   color: white;
-  width: 100%;
+  width: 300px;
+  font-size: 20px;
   border-radius: 5px;
   margin: 20px 0;
 }
