--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,20 @@ a {
   justify-content: center;
 }
 
+.search-bar {
+  position: relative;
+  display: block;
+  justify-self: center;
+  padding: 20 0;
+}
+
+.search-input {
+  display: block;
+  position: relative;
+  justify-content: center;
+  width: 33%;
+}
+
 .book-list {
   min-height: 80vh;
   width: 100%;
@@ -36,6 +50,21 @@ a {
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   text-align: center;
+}
+
+.favorites-button {
+  border-radius: 30px;
+  padding: 10px;
+  background: black;
+  color: white;
+  width: 300px;
+  font-size: 20px;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+.favorites-button:hover {
+  opacity: 0.5;
 }
 
 .favorites {
@@ -47,14 +76,59 @@ a {
   text-align: center;
 }
 
-img {
-  width: 300px;
-  height: 400px;
-  transition: all 0.3s ease;
+.book-details {
+  min-height: 80vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  /* text-align: center; */
+  padding: 10px;
 }
 
-img:hover {
-  transform: scale(1.1);
+.book-description {
+  margin: 0x 10px;
+}
+
+.book img {
+  opacity: 1;
+  display: block;
+  width: 300px;
+  height: 400px;
+  transition: all 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container {
+  position: relative;
+}
+
+.container:hover img {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #04aa6d;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  border-radius: 30px;
+  cursor: pointer;
 }
 
 .book {
@@ -63,14 +137,4 @@ img:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-button {
-  padding: 10px;
-  background: black;
-  color: white;
-  width: 300px;
-  font-size: 20px;
-  border-radius: 5px;
-  margin: 20px 0;
 }
