--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -19,6 +21,51 @@ a {
   justify-content: space-evenly;
 }
 
+/* ========= SearchBar Styles========== */
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00b4cc;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00b4cc;
+  background: #00b4cc;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap {
+  margin-top: 25px;
+  width: 30%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/* ========= End of SearchBar Styles========== */
+
 .footer {
   width: 100%;
   height: 10vh;
@@ -27,20 +74,6 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.search-bar {
-  position: relative;
-  display: block;
-  justify-self: center;
-  padding: 20 0;
-}
-
-.search-input {
-  display: block;
-  position: relative;
-  justify-content: center;
-  width: 33%;
 }
 
 .book-list {
