--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ a {
 .navbar {
   width: 100%;
   height: 10vh;
-  background: black;
-  color: white;
+  background: #565eaf;
+  color: #c2c8c6;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -26,31 +26,33 @@ a {
   width: 100%;
   position: relative;
   display: flex;
+  margin-top: 60px;
+  margin-bottom: 30px;
 }
 
 .searchTerm {
   width: 100%;
-  border: 3px solid #00b4cc;
+  border: 3px solid #c2c8c6;
   border-right: none;
   padding: 5px;
   height: 36px;
-  border-radius: 5px 0 0 5px;
+  border-radius: 30px 0 0 30px;
   outline: none;
   color: #9dbfaf;
 }
 
 .searchTerm:focus {
-  color: #00b4cc;
+  color: #3f4e51;
 }
 
 .searchButton {
   width: 40px;
   height: 36px;
-  border: 1px solid #00b4cc;
-  background: #00b4cc;
+  border: 1px solid #c2c8c6;
+  background: #c2c8c6;
   text-align: center;
   color: #fff;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 30px 30px 0;
   cursor: pointer;
   font-size: 20px;
 }
@@ -88,8 +90,10 @@ a {
 .favorites-button {
   border-radius: 30px;
   padding: 10px;
-  background: black;
-  color: white;
+  background-color: #ed643c;
+  border-color: #ff9b82;
+  box-shadow: #ddd7c9;
+  color: #ddd7c9;
   width: 300px;
   font-size: 20px;
   margin: 20px 0;
@@ -97,7 +101,7 @@ a {
 }
 
 .favorites-button:hover {
-  opacity: 0.5;
+  background-color: #ff9b82;
 }
 
 .favorites {
@@ -156,8 +160,8 @@ a {
 }
 
 .text {
-  background-color: #04aa6d;
-  color: white;
+  background-color: #966844;
+  color: #ddd7c9;
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 30px;
