--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ a:hover {
 
 /* Styles for the hero image */
 .hero {
-  /* Photo by mnm.all on Unsplash */
+  /* Photo by Jared Craig on Unsplash */
   background: url("https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80")
     center;
   background-size: cover;
@@ -80,11 +80,12 @@ a:hover {
   border-radius: 0.5rem;
 }
 
-.book > .book-list > figure {
-  /* overflow: hidden; */
+.book-list > .book > figure {
+  overflow: hidden;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
   position: relative;
+  width: 300px;
 }
 
 .book {
@@ -97,14 +98,13 @@ a:hover {
 
 .book-list > .book > figure > .book-image {
   position: relative;
-
   opacity: 1;
   width: 300px;
   height: 400px;
 }
 
 .book-list > .book > figure > figcaption {
-  position: relative;
+  position: absolute;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
