--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,7 @@ a:hover {
 
 .search-term {
   width: 100%;
-  border: 3px solid #c2c8c6;
+  border: 1px solid #72595a;
   border-right: none;
   padding: 5px;
   height: 36px;
@@ -211,13 +211,13 @@ a:hover {
 }
 
 .search-term:focus {
-  color: black;
+  color: #72595a;
 }
 
 .wrap > .search > button {
   width: auto;
   height: auto;
-  border: 1px solid #c2c8c6;
+  border: 1px solid #72595a;
   background: goldenrod;
   text-align: center;
   color: #fff;
@@ -225,6 +225,7 @@ a:hover {
   cursor: pointer;
   font-size: 18px;
   font-family: "Source Sans Pro", sans-serif;
+  transition: all 0.3s;
 }
 
 .wrap > .search > button:hover {
@@ -248,76 +249,23 @@ a:hover {
 }
 /* ========= End of SearchBar Styles========== */
 
-/* .footer {
-  width: 100%;
-  height: 10vh;
-  background: black;
+.footer {
+  /* Photo by Jared Craig on Unsplash */
+  background: url("https://images.unsplash.com/photo-1532012197267-da84d127e765?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80")
+    center;
+  background-size: cover;
+  padding: 4rem 2rem;
+  /* grid styles */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  align-items: center;
+}
+
+.footer > * {
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.book-list {
-  min-height: 80vh;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
-  text-align: center;
+.footer > p {
+  font-size: 1.5rem;
+  font-weight: 200;
 }
-
-.favorites-button {
-  border-radius: 30px;
-  padding: 10px;
-  background-color: #ed643c;
-  border-color: #ff9b82;
-  box-shadow: #ddd7c9;
-  color: #ddd7c9;
-  width: 300px;
-  font-size: 20px;
-  margin: 20px 0;
-  cursor: pointer;
-}
-
-.favorites-button:hover {
-  background-color: #ff9b82;
-}
-
-.favorites {
-  min-height: 80vh;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-items: center;
-  text-align: center;
-}
-
-.book-details {
-  min-height: 80vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  /* text-align: center; 
-  padding: 10px;
-}*/
-
-/* .book-description {
-  margin: 0x 10px;
-}
-
-.book img {
-  opacity: 1;
-
-  width: 300px;
-  height: 400px;
-}
-
-.book {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-} */
